--- a/Frontend/JoggingDiary/src/app/add-or-update-jogging/add-or-update-jogging.component.html
+++ b/Frontend/JoggingDiary/src/app/add-or-update-jogging/add-or-update-jogging.component.html
@@ -4,7 +4,7 @@
     <form>
         <div class="form-group">
             <label for="date-input">Jogging date:</label>
-            <input type="date" id="date-input" [value]="joggingInfo.date" (input)="joggingInfo.date = $event.target.value" class="form-control" (change)="console.log(joggingInfo.date);" />
+            <input type="date" id="date-input" [value]="joggingInfo.date" (input)="joggingInfo.date = $event.target.value" class="form-control" />
         </div>
         <div class="form-group">
             <label for="distance-input">Distance (m)</label>
