--- a/Frontend/JoggingDiary/src/app/home/home.component.html
+++ b/Frontend/JoggingDiary/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="oktaAuth.isAuthenticated()">
+<div class="container" *ngIf="isAuthenticated">
   <div class="row">
     <div class="col-md-4">
         <app-add-or-update-jogging (joggingCreated)="createOrUpdateJogging($event)" [joggingInfo]="currentJogging"></app-add-or-update-jogging>
