--- a/Frontend/JoggingDiary/src/app/add-or-update-jogging/add-or-update-jogging.component.html
+++ b/Frontend/JoggingDiary/src/app/add-or-update-jogging/add-or-update-jogging.component.html
@@ -4,15 +4,15 @@
     <form>
         <div class="form-group">
             <label for="date-input">Jogging date:</label>
-            <input type="date" id="date-input" [value]="joggingInfo.date" (input)="joggingInfo.date = $event.target.value" class="form-control" />
+            <input type="date" id="date-input" name="date-input" [(ngModel)]="joggingInfo.date" class="form-control" />
         </div>
         <div class="form-group">
             <label for="distance-input">Distance (m)</label>
-            <input type="number" id="distance-input" [value]="joggingInfo.distanceInMeters" (input)="joggingInfo.distanceInMeters = $event.target.value" class="form-control" />
+            <input type="number" id="distance-input" name="date-input" [(ngModel)]="joggingInfo.distanceInMeters" class="form-control" />
         </div>
         <div class="form-group">
             <label for="time-input">Time (s)</label>
-            <input type="number" id="time-input" [value]="joggingInfo.timeInSeconds" (input)="joggingInfo.timeInSeconds = $event.target.value" class="form-control" />
+            <input type="number" id="time-input" name="date-input" [(ngModel)]="joggingInfo.timeInSeconds" class="form-control" />
         </div>
         <button type="button" class="btn btn-primary" (click)="addOrUpdateJoggingRecord($event);">{{ buttonText }}</button>
     </form>
