--- a/Frontend/JoggingDiary/src/app/add-or-update-jogging/add-or-update-jogging.component.html
+++ b/Frontend/JoggingDiary/src/app/add-or-update-jogging/add-or-update-jogging.component.html
@@ -8,11 +8,11 @@
         </div>
         <div class="form-group">
             <label for="distance-input">Distance (m)</label>
-            <input type="number" id="distance-input" name="date-input" [(ngModel)]="joggingInfo.distanceInMeters" class="form-control" />
+            <input type="number" id="distance-input" name="distance-input" [(ngModel)]="joggingInfo.distanceInMeters" class="form-control" />
         </div>
         <div class="form-group">
             <label for="time-input">Time (s)</label>
-            <input type="number" id="time-input" name="date-input" [(ngModel)]="joggingInfo.timeInSeconds" class="form-control" />
+            <input type="number" id="time-input" name="time-input" [(ngModel)]="joggingInfo.timeInSeconds" class="form-control" />
         </div>
         <button type="button" class="btn btn-primary" (click)="addOrUpdateJoggingRecord($event);">{{ buttonText }}</button>
     </form>
